--- a/kontakt.html
+++ b/kontakt.html
@@ -13,15 +13,14 @@
         <div class="form-container">
             <h3>Email</h3>
             <div class="field">
-                <input type="text" id="email" class="input" placeholder=" " />
-                <label for="email" class="label">Email...</label>
-                <div id="emailError">*Email must contain a @ and a dot*</div>
+                <input type="text" id="email" class="input" placeholder=" Email... " />
+                <div id="emailError"> *Emailen skal indeholde @ og . * </div>
             </div>
 
             <h3>Besked</h3>
             <div class="field">
-                <input type="text" id="text" class="input2" placeholder=" " />
-                <label for="text" class="label2">Skriv Besked...</label>
+                <textarea rows="10" cols="56" placeholder="Skriv Besked..." id="text" class="input2"></textarea>
+                <div id="textError"> *Dette felt skal udfyldes* </div>
             </div>
 
             <input type="checkbox" id="check" class="input3"/>
