--- a/Tilmelding.html
+++ b/Tilmelding.html
@@ -15,12 +15,12 @@
 
             <!-- <h3>Fornavn</h3> -->
             <div class="field">
-                <textarea type="text" id="name" class="input" placeholder=" Fornavn..."></textarea> </textarea>
+                <input type="text" id="name" class="input" placeholder=" Fornavn..."></input>
             </div>
 
             <!-- <h3>Efternavn</h3> -->
             <div class="field">
-                <textarea type="text" id="name" class="input" placeholder=" Efternavn... "></textarea>
+                <input type="text" id="name" class="input" placeholder=" Efternavn... "></input>
             </div>
 
             <!-- <h3>Email</h3> -->
@@ -31,13 +31,13 @@
             <br><br>
             <!-- <h3>Alder</h3> -->
             <div class="field">
-                <textarea type="text" id="age" class="input" placeholder=" DD-MM-YYYY " onblur="ValidateDOB"></textarea>
+                <input type="text" id="age" class="input" placeholder=" DD-MM-YYYY " onblur="ValidateDOB"></input>
                 <span class="error" id="lblError"></span>
             </div>
 
             <!-- <h3>Telefon</h3> -->
             <div class="field">
-                <textarea type="text" id="tlf" class="input" placeholder=" Telefon... "></textarea>
+                <input type="text" id="tlf" class="input" placeholder=" Telefon... "></input>
             </div>
 
             <div class="field3">
