--- a/Tilmelding.html
+++ b/Tilmelding.html
@@ -37,7 +37,7 @@
 
             <!-- <h3>Telefon</h3> -->
             <div class="field">
-                <input type="text" id="tlf" class="input" placeholder=" Telefon... "></input>
+                <input type="phonenum" id="tlf" class="input" placeholder=" Telefon... " pattern="^\d{2}-\d{2}-\d{2}-\{2}$"></input>
             </div>
 
             <div class="field3">
