--- a/Tilmelding.html
+++ b/Tilmelding.html
@@ -55,13 +55,13 @@
 
 
     <div class="foot">
-        <h2 class="item1">Aalborg Biograf.</h2>
-        <p class="item2">
+        <h2 class="item1" id="media-item1">Aalborg Biograf.</h2>
+        <p class="item2" id="media-item2">
             Biografen <br>
             Haveje 33-35 - 1840 Avedøre
         </p>
 
-        <p class="item3">
+        <p class="item3" id="media-item3">
             Forestillinger:<br>
             Senior Bio: Man.- Tor.:	14.00 - 16.00<br><br>
 
@@ -72,7 +72,7 @@
             Fred. lørd. Midnat:	22.30 - 02.00
         </p>
 
-        <p class="item4">
+        <p class="item4" id="media-item4">
             55 33 23 16 - Billettelefonen er åben 30 min før dagens første forestilling. <br><br>
 
             E-mail: Biografen@mail.dk<br><br>
