--- a/Tilmelding.html
+++ b/Tilmelding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1 class="h11">Kontakt</h1>
+    <h1 class="h11">Tilmelding</h1>
     <form id="form" class="form" method="GET">
 
         <div class="form-container">
