--- a/index.html
+++ b/index.html
@@ -40,31 +40,8 @@
         <img id="trash-img" src="/img/Trash.jpg" alt="">
         <!-- Her kommer aktuel filmene -->
         <h2 id="Aktuel-film">AKTUELLE FILM</h2>
-        <section class="poster-forside">
-            <figure>
-                <img id="trash-poster" src="/img/Poster-Trash.jpg" alt="Poster Trash">
-                <a href="#"><button id="trash-bestil" class="posters-bestil">Bestil</button></a> 
-                <figcaption class="posters-overskrift">TRASH</figcaption>
-                <figcaption class="posters-info">Trash is a solid fun, not <br> particularly great...</figcaption>
-            </figure>
-            <figure>
-                <img id="citizenfour-poster" src="/img/Poster-Citizenfour.jpg" alt="Poster Citizenfour">
-               <a href="#"><button id="citizenfour-bestil" class="posters-bestil">Bestil</button></a> 
-                <figcaption class="posters-overskrift">CITIZENFOUR</figcaption>
-                <figcaption class="posters-info">Dokumentarfilmen <br> 'Citizenfour' <br> handler om whistlebloweren <br> Edware Snowden</figcaption>
-            </figure>
-            <figure>
-                <img id="ida-poster" src="/img/Poster-Ida.gif" alt="Poster Ida">
-                <a href="#"><button id="ida-bestil" class="posters-bestil">Bestil</button></a>
-                <figcaption class="posters-overskrift">IDA</figcaption>
-                <figcaption class="posters-info">Det polske drama 'Ida' handler <br> om en 17-årige pige...</figcaption>
-            </figure>
-            <figure>
-                <img id="riot-poster" src="/img/Poster-Riot.jpg" alt="Poster The Riot Club">
-               <a href="#"><button id="riot-bestil" class="posters-bestil">Bestil</button></a> 
-                <figcaption class="posters-overskrift">THE RIOT CLUB</figcaption>
-                <figcaption class="posters-info">The Riot club handler om en <br> berygtet og prestigefyldt klub <br> på Oxford Universitet...</figcaption>
-            </figure>
+        <section class="poster-forside" id="post">
+
         </section>
 
         <footer>
@@ -89,5 +66,6 @@
             </p>
         </div>
     </footer>
+    <script src="js/mpapp.js"></script>
 </body>
 </html>
