--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
         </p>
         <a href="#"><button id="btn-bestil">Bestil</button></a>
          </div>
-        <img id="trash-img" src="/img/Trash.jpg" alt="">
+        <img id="trash-img" src="img/Trash.jpg" alt="">
         <!-- Her kommer aktuel filmene -->
         <h2 id="Aktuel-film">AKTUELLE FILM</h2>
         <section class="poster-forside" id="post">
