update merge by folder

--- a/Tilmelding.html
+++ b/Tilmelding.html
@@ -50,8 +50,8 @@
                 <button type="reset" id="button-submit" class="fortryd">Fortryd</button>
             </div>
         </div>
-        </form>
-            <script src="til.js"></script>
+    </form>
+    <script src="js/til.js"></script>
 
 
     <div class="foot">
