--- a/kontakt.html
+++ b/kontakt.html
@@ -33,7 +33,7 @@
 
         <img src="/img/Haslev_Bio_643116a.jpg"  class="imga"/>
         </form>
-            <script src="formjs.js"></script>
+            <script src="js/formjs.js"></script>
 
 
 
